2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/alloc.c, common-src/amanda.h: modify safe_env_full() to
	  util.c and remove file and prototypes
	* common-src/util.c, common-src/util.h: put function and prototypes
	  here
	* common-src/Makefile.am: remove alloc.c from sources

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/amanda.h: remove strappend() macro, it is not unused

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/amindexd.c: main(): replace strappend() usage with a
	  temporary variable and g_free()/g_strconcat(); push down local
	  variable "part"

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/amcheck.c: start_host(): replace strappend() usage with a
	  GString; also, remove unneeded local variables and introduce another
	  GString to build the request

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/amcheck.c: start_server_check(): replace strappend()
	  usage with g_strconcat()/g_free()

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/amcheck.c: main(): replace strappend() usage with GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* recover-src/uscan.l: replace strappend() usage with a GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* recover-src/set_commands.c: set_directory(): replace strappend() usage
	  with a GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* recover-src/set_commands.c: cd_regex(): replace strappend() usage with
	  g_free()/g_strconcat(); improve g_strjoin() usage; use g_free()

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* recover-src/set_commands.c: cd_glob(): replace strappend() usage with
	  g_strconcat(); improve g_strjoin() usage; use g_free()

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* recover-src/extract-list.c: delete_glob(): replace strappend() usage
	  with g_strconcat(); fix regex

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>