@@ -1,4 +1,7 @@
 2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
+	* common-src/util.c: don't check for allocation failures
+
+2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
 	* common-src/alloc.c, common-src/amanda.h: modify safe_env_full() to
 	  util.c and remove file and prototypes
 	* common-src/util.c, common-src/util.h: put function and prototypes
